fix some spacing and padding issues

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li{
     align-items: center;
 }
 .info-title{
-    size: 360px;
+    size: 36px;
     font-weight: 900;
     color: #1F2937;
 }
@@ -82,6 +82,7 @@ li{
     justify-content: center;
     align-items: center;
     gap: 40px;
+    padding:50px 0px ;
 }
 
 .image-card{
